--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,8 @@ fabric.properties
 .idea/**/markdown-navigator.xml
 .idea/**/markdown-navigator-enh.xml
 .idea/**/markdown-navigator/
+.idea/
+
 
 # Cache file creation bug
 # See https://youtrack.jetbrains.com/issue/JBR-2257
