--- a/.gitignore
+++ b/.gitignore
@@ -154,4 +154,5 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
+application.yml
 # End of https://www.toptal.com/developers/gitignore/api/macos
