--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -240,4 +240,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+application.yml
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,node,dotenv
