--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "axios": "^1.7.7",
     "bootstrap-icons": "^1.11.3",
     "frontend": "file:",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-use": "^17.5.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
