--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-use": "^17.5.1",
+    "socket.io-client": "^4.8.0",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
@@ -47,6 +48,5 @@
   "devDependencies": {
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.3"
-  },
-  "proxy": "http://localhost:8080"
+  }
 }
