--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.7",
     "bootstrap-icons": "^1.11.3",
     "frontend": "file:",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
