--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.5",
     "frontend": "file:",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
