--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+	// java-mail
+	implementation 'org.springframework.boot:spring-boot-starter-mail:3.3.4'
 }
 
 tasks.named('test') {
